# implicit-conversion-hazard-analysis

./: .gitignore  CMakeLists.txt  ContextCollector.cpp  ContextCollector.h  DESIGN.md  EVALUATION.md  FixItGenerator.cpp  FixItGenerator.h  IMPLEMENTATION.md  ImplicitConversionVisitor.cpp  ImplicitConversionVisitor.h  README.md  RiskScorer.cpp  RiskScorer.h  SimpleCompilationDB.h  build.sh  main.cpp  run.sh  sample_findings_dashboard.md
evaluation/: compare_wconversion.sh  cve_correlation.py  run_no_db.sh  run_on_project.sh
evaluation/output/: sqlite_20260531_223528.md
scripts/: build.sh
test/: test-api-boundary.c  test-enum-switch.c  test-float-loop.c  test-narrowing.c  test-sign-compare.c
